fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -470,6 +470,7 @@ input:focus + .slider {
 }
 
 .dropdown {
+  
   margin-left: 10px;
   margin-right: 10px;
   width: 150px;
@@ -551,8 +552,8 @@ input:focus + .slider {
     border-radius: 0 1px 2px 2px;
     overflow: hidden;
     display: none;
-    max-height: 144px;
-    overflow-y: auto;
+    max-height: 150px;
+    overflow-y: hidden;
     z-index: 9
 }
 .dropdown .dropdown-menu li {
